--- a/Lesen 001/code/exampl01/index.html
+++ b/Lesen 001/code/exampl01/index.html
@@ -13,8 +13,8 @@
 
 
     <h1>Телевизор</h1>
-    <a href="./about/index.html">Про нас</a>
-    <a href="#mytable">переход к таблице</a>
+    <a href="./about/index.html">Про нас</a> <!--переход на другую страницу-->
+    <a href="#mytable">переход к таблице</a> <!--переход по странице к другому объекту-->
     
     <p>
         <span> Lorem </span>  ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
@@ -24,44 +24,35 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
     </p>
 
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quam et repudiandae aut vero, sapiente facilis quos corporis totam, iusto, aspernatur odio necessitatibus. Quidem voluptatem provident veniam minima iure architecto?
-    </p>
+   
 
 
 
     <h2>фото</h2>
-    <img src="./images/tv.jpg" alt="">
+    <img src="./images/tv.jpg" alt=""> <!--добавление изображения-->
 
 
     <h2>ссылки</h2>
     <a href="https://www.amazon.de/-/en/iGoo-TV-Netflix-Paramount-Waipu-tv-Assistant-black/dp/B0CBKW9J72/ref=sr_1_10">ссылка</a>
 
-    <div></div>
-    <a href="https://www.amazon.de/-/en/iGoo-TV-Netflix-Paramount-Waipu-tv-Assistant-black/dp/B0CBKW9J72/ref=sr_1_10">ссылка</a>
-    <br>
+    <div></div>  <!--перенос строки-->
 
     <a href="https://www.amazon.de/-/en/iGoo-TV-Netflix-Paramount-Waipu-tv-Assistant-black/dp/B0CBKW9J72/ref=sr_1_10">ссылка</a>
+    
+    <br>  <!--перенос строки-->
+
+    <a href="https://www.amazon.de/-/en/iGoo-TV-Netflix-Paramount-Waipu-tv-Assistant-black/dp/B0CBKW9J72/ref=sr_1_10">ссылка</a>
 
 
 
-    <ul>
+    <ul>  <!--маркированый список-->
         <li>элемент списка 1</li>
         <li>элемент списка 2</li>
 
 
     </ul>
 
-    <ol>
+    <ol>  <!--нумерованый список-->
         <li>элемент списка 1</li>
         <li>элемент списка 2</li>
 
