--- a/Lesen 003/code/example_01/index.html
+++ b/Lesen 003/code/example_01/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Styles</title>
 
     <style>
@@ -17,7 +18,7 @@
             color: blueviolet;
             font-size: 50px;
         } */
-        .vialet-style {
+        /* .vialet-style {
             color: blueviolet;
             font-size: 50px;
         }
@@ -25,16 +26,26 @@
         #four {
             color: bisque;
 
-        }
+        } */
 
 
     </style>
 </head>
 <body>
-    <!-- <h1 style="color: blueviolet; font-size: 50;">Телевизоры Samsung</h1> -->
-    <h1 class="vialet-style">Телевизоры Samsung</h1>
+    <header>
+        <nav></nav>
+    </header>
 
-    <p class="vialet-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi asperiores excepturi ipsa earum, sit praesentium vitae adipisci molestias ut accusamus iste, soluta cumque aspernatur, possimus quod aliquam omnis assumenda neque.</p>
+    <main>
+
+
+    </main>
+    <!-- <h1 style="color: blueviolet; font-size: 50;">Телевизоры Samsung</h1> inline стиль  -->
+    <h1 class="vialet-style"><span>Телевизоры</span> Samsung</h1>
+
+    <span><a href="#">Lorem</a></span>
+
+    <p class="vialet-style fontsize25"><span>Lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Animi asperiores excepturi ipsa earum, sit praesentium vitae adipisci molestias ut accusamus iste, soluta cumque aspernatur, possimus quod aliquam omnis assumenda neque.</p>
 
     <p class="vialet-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi asperiores excepturi ipsa earum, sit praesentium vitae adipisci molestias ut accusamus iste, soluta cumque aspernatur, possimus quod aliquam omnis assumenda neque.</p>
 
@@ -46,8 +57,27 @@
 
     <p class="blue-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi asperiores excepturi ipsa earum, sit praesentium vitae adipisci molestias ut accusamus iste, soluta cumque aspernatur, possimus quod aliquam omnis assumenda neque.</p>
 
+<ul>
+    <li>first</li>
+    <li>second</li>
+    <li>third</li>
+</ul>
+
+<p class="experimets">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi beatae rerum natus repudiandae. Nemo qui vel, harum autem saepe in obcaecati nam dignissimos? Doloribus, accusantium pariatur eveniet accusamus tenetur dolore!</p>
+
+<p class="experimets1"> 1 </p>
+<p class="experimets2"> 2 </p>
+<p class="experimets3"> 3 </p>
+
+<div class="ex ex1">1</div>
+<div class="ex ex2">2</div>
+<br>
+<div class="ex ex3">3</div>
+
+<footer>
 
 
+</footer>
 
     
 </body>
